--- a/index.html
+++ b/index.html
@@ -11,13 +11,77 @@
     <!-- HEADER AND NAVI BAR -->
     <header class="fixed top-0 z-20 w-full bg-red-700" x-data="{ open: false }">
       <nav
-        class="mx-auto flex max-w-7xl items-center justify-start p-4 lg:px-6"
+        class="mx-auto flex max-w-7xl items-center justify-between p-4 lg:px-6"
         aria-label="Global"
       >
-        <div class="absolute right-0 ml-auto flex p-2">
+        <!-- Left: Logo -->
+        <div class="lg:flex lg:gap-x-10 flex items-center">
+          <a href="#home" class="logo flex gap-2 items-center">
+            <img
+              src="public/icon.png"
+              alt="Your Brand Logo"
+              class="h-10 w-auto"
+            />
+            <p class="font-bold text-white italic">Sunny Delights</p>
+          </a>
+        </div>
+
+        <!-- Middle: Search Bar (Hidden on small screens) -->
+        <div class="hidden sm:flex items-center w-1/3">
+          <div class="relative w-full">
+            <input
+              type="text"
+              placeholder="Search candies..."
+              class="w-full pl-10 pr-4 py-2 rounded-full border border-gray-300 focus:outline-none focus:ring-2 focus:ring-pink-400"
+            />
+            <div
+              class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none"
+            >
+              <svg
+                class="h-5 w-5 text-gray-500"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M21 21l-4.35-4.35M17 11a6 6 0 11-12 0 6 6 0 0112 0z"
+                />
+              </svg>
+            </div>
+          </div>
+        </div>
+
+        <!-- Right: Cart & Mobile Menu Button -->
+        <div class="flex items-center space-x-4">
+          <!-- Cart Icon -->
+          <a href="#cart" class="relative flex items-center">
+            <svg
+              class="h-8 w-7 text-white hover:text-pink-200"
+              fill="none"
+              stroke="currentColor"
+              viewBox="0 0 24 24"
+              stroke-width="2"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 7M7 13l-2 4h14l-2-4"
+              />
+            </svg>
+            <span
+              class="absolute -top-2 -right-3 bg-yellow-500 text-white text-xs font-bold px-2 py-0.5 rounded-full"
+              >3</span
+            >
+          </a>
+
+          <!-- Mobile Menu Button -->
           <button
             type="button"
-            class="-m-2.5 inline-flex items-center justify-center rounded-md p-2.5 text-gray-700"
+            class="-m-2.5 inline-flex items-center justify-center rounded-md p-2.5 text-white lg:hidden"
             @click="open = true"
           >
             <span class="sr-only">Open main menu</span>
@@ -37,26 +101,21 @@
             </svg>
           </button>
         </div>
-        <div class="lg:flex lg:gap-x-10">
-          <a href="#home" class="logo flex gap-1">
-            <img src="public/icon.png" alt="Your Brand Logo" />
-            <p class="font-bold text-white italic">Sunny Delights</p>
-          </a>
-        </div>
       </nav>
-      <!-- Mobile menu, show/hide based on menu open state. -->
+
+      <!-- Mobile Sidebar Menu -->
       <div role="dialog" aria-modal="true">
-        <!-- Sidebar, shown only when open is true -->
         <div
           class="fixed inset-y-0 right-0 z-10 w-64 overflow-y-auto bg-red-700 px-6 py-6 sm:max-w-sm sm:ring-1 sm:ring-gray-900/10 text-center"
           x-show="open"
           x-cloak
           @click.away="open = false"
         >
-          <div class="flex items-center justify-end">
+          <div class="flex items-center justify-between">
+            <h2 class="text-white font-bold text-lg">Categories</h2>
             <button
               type="button"
-              class="-m-2.5 rounded-md p-2.5 text-gray-700"
+              class="-m-2.5 rounded-md p-2.5 text-white"
               @click="open = false"
             >
               <span class="sr-only">Close menu</span>
@@ -81,38 +140,37 @@
               <div class="space-y-2 py-6">
                 <a
                   href="#"
-                  class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-white"
+                  class="block rounded-lg px-3 py-2 text-base font-semibold text-white"
                   @click="open = false"
                   >Chocolates</a
                 >
                 <hr />
                 <a
                   href="#"
-                  class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-white"
+                  class="block rounded-lg px-3 py-2 text-base font-semibold text-white"
                   @click="open = false"
-                  >Lolipops</a
+                  >Lollipops</a
                 >
                 <hr />
                 <a
                   href="#"
-                  class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-white"
+                  class="block rounded-lg px-3 py-2 text-base font-semibold text-white"
                   @click="open = false"
                   >Candy</a
                 >
                 <hr />
                 <a
                   href="#"
-                  class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-white"
+                  class="block rounded-lg px-3 py-2 text-base font-semibold text-white"
                   @click="open = false"
                   >Cookies</a
                 >
                 <hr />
                 <a
                   href="#"
-                  class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-white"
+                  class="block rounded-lg px-3 py-2 text-base font-semibold text-white"
                   @click="open = false"
-                >
-                  Cakes</a
+                  >Cakes</a
                 >
               </div>
             </div>
