added hover effects on header

--- a/index.html
+++ b/index.html
@@ -140,44 +140,48 @@
               <div class="space-y-2 py-6">
                 <a
                   href="#"
-                  class="block rounded-lg px-3 py-2 text-base font-semibold text-white"
+                  class="block rounded-lg px-3 py-2 text-base font-semibold text-white hover:bg-red-500 transition-colors duration-300 ease-in-out"
                   @click="open = false"
                   >Chocolates</a
                 >
                 <hr />
                 <a
                   href="#"
-                  class="block rounded-lg px-3 py-2 text-base font-semibold text-white"
+                  class="block rounded-lg px-3 py-2 text-base font-semibold text-white hover:bg-red-500 transition-colors duration-300"
                   @click="open = false"
                   >Lollipops</a
                 >
                 <hr />
                 <a
                   href="#"
-                  class="block rounded-lg px-3 py-2 text-base font-semibold text-white"
+                  class="block rounded-lg px-3 py-2 text-base font-semibold text-white hover:bg-red-500 transition-colors duration-300 ease-in-out"
                   @click="open = false"
                   >Candy</a
                 >
                 <hr />
                 <a
                   href="#"
-                  class="block rounded-lg px-3 py-2 text-base font-semibold text-white"
+                  class="block rounded-lg px-3 py-2 text-base font-semibold text-white hover:bg-red-500 transition-colors duration-300 ease-in-out"
                   @click="open = false"
                   >Cookies</a
                 >
                 <hr />
                 <a
                   href="#"
-                  class="block rounded-lg px-3 py-2 text-base font-semibold text-white"
+                  class="block rounded-lg px-3 py-2 text-base font-semibold text-white ease-in-out hover:bg-red-500 transition-colors duration-300"
                   @click="open = false"
-                  >Cakes</a
                 >
+                  Cakes
+                </a>
               </div>
             </div>
           </div>
         </div>
       </div>
     </header>
+
+    <!-- HOME -->
+    <section></section>
   </body>
   <script
     src="https://cdn.jsdelivr.net/npm/alpinejs@latest/dist/cdn.min.js"
