minor clean up in header

--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
               </svg>
             </button>
           </div>
-          <div class="mt-6 flow-root">
-            <div class="-my-6 divide-y divide-gray-500/10">
-              <div class="space-y-2 py-6">
+          <div class="mt-6 flow-root pt-4">
+            <div class="-my-6">
+              <div class="space-y-3 py-6">
                 <a
                   href="#"
                   class="block rounded-lg px-3 py-2 text-base font-semibold text-white hover:bg-red-500 transition-colors duration-300 ease-in-out"
