changed script.js path

--- a/index.html
+++ b/index.html
@@ -461,5 +461,5 @@
   ></script>
   <!-- swiper js -->
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-  <script src="/script.js"></script>
+  <script src="script.js"></script>
 </html>
