--- a/index.html
+++ b/index.html
@@ -432,37 +432,25 @@
 
     <!-- ABOUT -->
     <section
-      class="flex flex-col justify-center items-center p-5 text-center my-10"
+      class="flex flex-col justify-center items-center p-5 text-center text-wrap m-10 border border-pink-500 bg-rose-100"
     >
-      <h2
-        class="uppercase p-4 text-pink-700 font-bold text-xl"
-        data-aos="fade-up"
-      >
-        About us
-      </h2>
-
-      <div class="w-[90%] font-bold leading-relaxed text-lg mt-5 space-y-3">
+      <div class="font-semibold leading-relaxed text-lg text-pink-600">
         <p
-          class="bg-gradient-to-b from-pink-600 to-pink-500 bg-clip-text text-transparent"
-          data-aos="fade-up"
-          data-aos-delay="100"
+          class="tracking-widest italic bg-gradient-to-b to-pink-500 bg-clip-text text-transparent font-bold mb-5"
         >
-          Sunny Delights – Bringing Warmth & Sweetness Since 2023!
+          Sunny Delights
         </p>
 
-        <p
-          class="bg-gradient-to-b from-pink-500 to-pink-400 bg-clip-text text-transparent"
-          data-aos="fade-up"
-          data-aos-delay="200"
-        >
+        <p class="tracking-tight">
+          Bringing Warmth & Sweetness Since
+          <i class="text-pink-300!">2023</i>&nbsp;!
+        </p>
+
+        <p class="tracking-tight">
           From fluffy marshmallows to rich chocolates
         </p>
 
-        <p
-          class="bg-gradient-to-b from-pink-400 to-pink-300 bg-clip-text text-transparent"
-          data-aos="fade-up"
-          data-aos-delay="300"
-        >
+        <p class="tracking-tight">
           Every treat is crafted with love to brighten your day!
         </p>
       </div>
