added section ids and connected with sidebar links

--- a/index.html
+++ b/index.html
@@ -154,14 +154,14 @@
             <div class="-my-6">
               <div class="space-y-3 py-6">
                 <a
-                  href="#"
+                  href="#home"
                   class="cat block rounded-lg px-3 py-2 text-base font-semibold text-white hover:bg-pink-300 hover:opacity-80 transition-colors duration-300 ease-in-out"
                   @click="open = false"
                   >Home</a
                 >
                 <hr class="text-pink-500" />
                 <a
-                  href="#"
+                  href="#about"
                   class="cat block rounded-lg px-3 py-2 text-base font-semibold text-white hover:bg-pink-300 hover:opacity-80 transition-colors duration-300 ease-in-out"
                   @click="open = false"
                   >About</a
@@ -211,6 +211,7 @@
 
     <!-- HOME -->
     <section
+      id="home"
       class="flex justify-center items-center lg:justify-end mt-32 mb-12"
     >
       <div class="flex items-center w-full max-w-6xl px-5 space-x-6">
@@ -432,6 +433,7 @@
 
     <!-- ABOUT -->
     <section
+      id="about"
       class="flex flex-col justify-center items-center p-5 text-center text-wrap m-10 border border-pink-500 bg-rose-100"
     >
       <div class="font-semibold leading-relaxed text-lg text-pink-600">
