--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     />
     <!-- aos -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <!-- remix icons -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
     <title>Sunny Delights | A Sweet Dream</title>
   </head>
   <body class="bg-black">
@@ -459,6 +464,117 @@
     </section>
 
     <div class="w-full h-10 divider border-t border-b border-pink-500"></div>
+    <!-- temp divider -->
+    <div class="w-full h-10 bg-white"></div>
+
+    <!-- FOOTER -->
+    <footer class="text-white border-t border-pink-500">
+      <div class="flex justify-center">
+        <p
+          class="tracking-widest italic bg-gradient-to-b from-white to-rose-100 bg-clip-text text-transparent font-bold mb-5 p-5"
+        >
+          Sunny Delights
+        </p>
+      </div>
+
+      <div class="grid grid-cols-2 justify-center items-center mb-8 gap-2">
+        <div
+          class="px-3 text-center flex flex-col justify-center items-center text-wrap m-2 space-y-1 font-light"
+        >
+          <p class="uppercase font-bold px-3 text-pink-500 border-b">
+            products
+          </p>
+          <a
+            class="px-3 hover:text-orange-200 transition-colors duration-300 cursor-pointer"
+          >
+            sunfire cakes
+          </a>
+          <a
+            class="px-3 hover:text-orange-200 transition-colors duration-300 cursor-pointer"
+          >
+            sunny candies
+          </a>
+          <a
+            class="px-3 hover:text-orange-200 transition-colors duration-300 cursor-pointer"
+          >
+            sunlight lollipops
+          </a>
+          <a
+            class="px-2 tracking-tighter hover:text-orange-200 transition-colors duration-300 cursor-pointer"
+          >
+            sunbrust chocolates
+          </a>
+        </div>
+        <div
+          class="px-3 text-center flex flex-col justify-center items-center text-wrap m-2 space-y-1 font-light"
+        >
+          <p class="uppercase font-bold px-3 text-pink-500 border-b">socials</p>
+          <a
+            class="px-3 tracking-widest hover:text-orange-200 transition-colors duration-300 cursor-pointer"
+          >
+            <i class="ri-tiktok-line"></i> TikTok
+          </a>
+          <a
+            class="px-3 tracking-widest hover:text-orange-200 transition-colors duration-300 cursor-pointer"
+          >
+            <i class="ri-twitter-x-line"></i> Twitter
+          </a>
+          <a
+            class="px-3 hover:text-orange-200 transition-colors duration-300 cursor-pointer"
+          >
+            <i class="ri-instagram-line"></i> Instagram
+          </a>
+          <a
+            class="px-3 hover:text-orange-200 transition-colors duration-300 cursor-pointer"
+          >
+            <i class="ri-facebook-box-line"></i> Facebook
+          </a>
+        </div>
+        <div
+          class="px-3 text-center text-wrap m-2 flex flex-col justify-center items-center space-y-1 font-light"
+        >
+          <p class="uppercase font-bold px-3 text-pink-500 border-b">
+            Information
+          </p>
+          <a
+            class="px-3 hover:text-orange-200 transition-colors duration-300 cursor-pointer"
+          >
+            About us
+          </a>
+          <a
+            class="px-3 hover:text-orange-200 transition-colors duration-300 cursor-pointer"
+          >
+            Contact us
+          </a>
+          <a
+            class="px-3 cursor-pointer hover:text-orange-200 transition-colors duration-300"
+            >Frequently Asked Questions</a
+          >
+        </div>
+        <div
+          class="px-3 text-center flex flex-col justify-center items-center text-wrap m-2 space-y-1 font-light"
+        >
+          <p class="uppercase font-bold px-3 text-pink-500 border-b">
+            More Of Us
+          </p>
+          <a
+            class="px-3 hover:text-orange-200 transition-colors duration-300 cursor-pointer"
+          >
+            Events
+          </a>
+          <a
+            class="px-3 hover:text-orange-200 transition-colors duration-300 cursor-pointer"
+          >
+            Jobs
+          </a>
+          <p>&nbsp;&nbsp;</p>
+          <p>&nbsp;</p>
+        </div>
+      </div>
+      <div class="flex justify-center border-t border-pink-500 bg-pink-800">
+        <p class="py-2">@2025 sunny delights. All rights reserved.</p>
+      </div>
+    </footer>
   </body>
   <!-- aos -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
