edits on the footer

--- a/index.html
+++ b/index.html
@@ -485,24 +485,24 @@
             products
           </p>
           <a
-            class="px-3 hover:text-orange-200 transition-colors duration-300 cursor-pointer"
+            class="hover:text-orange-200 transition-colors duration-300 cursor-pointer"
           >
-            sunfire cakes
+            Sunfire Cakes
           </a>
           <a
-            class="px-3 hover:text-orange-200 transition-colors duration-300 cursor-pointer"
+            class="hover:text-orange-200 transition-colors duration-300 cursor-pointer"
           >
-            sunny candies
+            Sunlight Candies
           </a>
           <a
-            class="px-3 hover:text-orange-200 transition-colors duration-300 cursor-pointer"
+            class="hover:text-orange-200 transition-colors duration-300 cursor-pointer"
           >
-            sunlight lollipops
+            Sunny Lollipops
           </a>
           <a
-            class="px-2 tracking-tighter hover:text-orange-200 transition-colors duration-300 cursor-pointer"
+            class="tracking-tighter hover:text-orange-200 transition-colors duration-300 cursor-pointer"
           >
-            sunbrust chocolates
+            Sunbrust Chocolates
           </a>
         </div>
         <div
@@ -510,22 +510,22 @@
         >
           <p class="uppercase font-bold px-3 text-pink-500 border-b">socials</p>
           <a
-            class="px-3 tracking-widest hover:text-orange-200 transition-colors duration-300 cursor-pointer"
+            class="tracking-widest hover:text-orange-200 transition-colors duration-300 cursor-pointer"
           >
             <i class="ri-tiktok-line"></i> TikTok
           </a>
           <a
-            class="px-3 tracking-widest hover:text-orange-200 transition-colors duration-300 cursor-pointer"
+            class="tracking-widest hover:text-orange-200 transition-colors duration-300 cursor-pointer"
           >
             <i class="ri-twitter-x-line"></i> Twitter
           </a>
           <a
-            class="px-3 hover:text-orange-200 transition-colors duration-300 cursor-pointer"
+            class="hover:text-orange-200 transition-colors duration-300 cursor-pointer"
           >
             <i class="ri-instagram-line"></i> Instagram
           </a>
           <a
-            class="px-3 hover:text-orange-200 transition-colors duration-300 cursor-pointer"
+            class="hover:text-orange-200 transition-colors duration-300 cursor-pointer"
           >
             <i class="ri-facebook-box-line"></i> Facebook
           </a>
@@ -533,21 +533,19 @@
         <div
           class="px-3 text-center text-wrap m-2 flex flex-col justify-center items-center space-y-1 font-light"
         >
-          <p class="uppercase font-bold px-3 text-pink-500 border-b">
-            Information
-          </p>
+          <p class="uppercase font-bold text-pink-500 border-b">Information</p>
           <a
-            class="px-3 hover:text-orange-200 transition-colors duration-300 cursor-pointer"
+            class="hover:text-orange-200 transition-colors duration-300 cursor-pointer"
           >
             About us
           </a>
           <a
-            class="px-3 hover:text-orange-200 transition-colors duration-300 cursor-pointer"
+            class="hover:text-orange-200 transition-colors duration-300 cursor-pointer"
           >
             Contact us
           </a>
           <a
-            class="px-3 cursor-pointer hover:text-orange-200 transition-colors duration-300"
+            class="cursor-pointer hover:text-orange-200 transition-colors duration-300"
             >Frequently Asked Questions</a
           >
         </div>
@@ -572,7 +570,7 @@
         </div>
       </div>
       <div class="flex justify-center border-t border-pink-500 bg-pink-800">
-        <p class="py-2">@2025 sunny delights. All rights reserved.</p>
+        <p class="py-2">@2025 Sunny Delights. All rights reserved.</p>
       </div>
     </footer>
   </body>
