added product section n data

--- a/index.html
+++ b/index.html
@@ -467,6 +467,27 @@
     <!-- temp divider -->
     <div class="w-full h-10 bg-white"></div>
 
+    <!-- PRODUCTS -->
+    <section id="products" class="bg-pink-100 p-5">
+      <h1 class="text-3xl font-bold text-center text-pink-600 mb-6">
+        🍭 Our Sweet Collection 🍬
+      </h1>
+
+      <div
+        id="productGrid"
+        class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6"
+      >
+        <!-- Products will be injected here -->
+      </div>
+
+      <!-- Cart Counter -->
+      <div
+        class="fixed bottom-5 right-5 bg-pink-600 text-white px-4 py-2 rounded-full"
+      >
+        🛒 Cart: <span id="cartCount">0</span>
+      </div>
+    </section>
+
     <!-- FOOTER -->
     <footer class="text-white border-t border-pink-500">
       <div class="flex justify-center">
