--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <input
               type="text"
               placeholder="Search candies..."
-              class="w-full pl-10 pr-4 py-2 rounded-full border focus:outline-none focus:ring-2 focus:ring-pink-200 text-white"
+              class="w-full pl-10 pr-4 py-2 rounded-full border focus:outline-none focus:ring-2 focus:ring-pink-200 text-pink-600"
             />
             <div
               class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none"
@@ -128,6 +128,9 @@
           id="sidebar"
           class="fixed inset-y-0 right-0 z-10 w-64 overflow-y-auto px-6 py-6 sm:max-w-sm sm:ring-1 sm:ring-white text-center"
           x-show="open"
+          x-transition:enter="transform transition ease-in-out duration-300"
+          x-transition:enter-start="translate-x-full opacity-0"
+          x-transition:enter-end="translate-x-0 opacity-100"
           x-cloak
           @click.away="open = false"
         >
@@ -140,6 +143,7 @@
             >
               <span class="sr-only">Close menu</span>
               <svg
+                @keydown.escape.window="open = false"
                 class="size-6 text-pink-500"
                 fill="none"
                 viewBox="0 0 24 24"
