added meta seo tags

--- a/index.html
+++ b/index.html
@@ -5,6 +5,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="public/icon.png" />
     <link rel="stylesheet" href="src/output.css" />
+    <!-- seo meta tags -->
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="Sunny Delights | A Sweet Dream" />
+    <meta
+      name="description"
+      content="Discover a world of delicious candies, chocolates, and sweet treats at Sunny Delights! Indulge in your sweetest dreams."
+    />
+    <meta
+      name="keywords"
+      content="candy, chocolates, sweets, desserts, lollipops, cookies, cakes, Sunny Delights"
+    />
+    <meta name="author" content="Sunny Delights" />
+    <meta name="robots" content="index, follow" />
+    <meta name="theme-color" content="#ff69b4" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://sunnycc17.github.io/E-commerce-site/"
+    />
+    <meta property="og:title" content="Sunny Delights | A Sweet Dream" />
+    <meta
+      property="og:description"
+      content="Discover a world of delicious candies, chocolates, and sweet treats at Sunny Delights! Indulge in your sweetest dreams."
+    />
+    <meta
+      property="og:image"
+      content="https://sunnycc17.github.io/E-commerce-site/public/icon.png"
+    />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:url"
+      content="https://sunnycc17.github.io/E-commerce-site/"
+    />
+    <meta name="twitter:title" content="Sunny Delights | A Sweet Dream" />
+    <meta
+      name="twitter:description"
+      content="Discover a world of delicious candies, chocolates, and sweet treats at Sunny Delights! Indulge in your sweetest dreams."
+    />
+    <meta
+      name="twitter:image"
+      content="https://sunnycc17.github.io/E-commerce-site/public/icon.png"
+    />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="public/icon.png" />
+
     <!-- swiper -->
     <link
       rel="stylesheet"
